<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainLoginActivity">

    <TextView
        android:id="@+id/tvApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center"
        android:textColor="@android:color/holo_purple"
        android:text="@string/calculator_title" />

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:text="@string/logout"
        android:textColor="@color/teal_700"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvBillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:text="@string/bill_amount_label"
        android:textSize="20sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editBillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="8"
        android:hint="@string/bill_amount"
        android:inputType="numberDecimal"
        android:textSize="20sp">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvPercentLabel"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:padding="10dp"
        android:text="@string/tip_percent_label"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPercentNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/tip_percent"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_marginStart="65dp"
        android:layout_marginTop="10dp"
        android:text="@string/decrease"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_marginStart="135dp"
        android:layout_marginTop="10dp"
        android:text="@string/increase"
        android:textSize="20sp" />



    <TextView
        android:id="@+id/tvTipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_marginStart="24dp"
        android:layout_marginTop="0dp"
        android:padding="10dp"
        android:text="@string/tip_amount_label"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_marginBottom="12dp"
        android:padding="5dp"
        android:text="@string/total_amount"
        android:textSize="20sp" />



    <TextView
        android:id="@+id/tvTotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:padding="10dp"
        android:text="@string/total_amount_label"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_marginTop="12dp"
        android:padding="5dp"
        android:text="@string/tip_amount"
        android:textSize="20sp" />

</GridLayout>