<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CasesMonthYear">


    <EditText
        android:id="@+id/monthSearch"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="153dp"
        android:ems="10"
        android:hint="@string/month"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/yearSearch"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="288dp"
        android:ems="10"
        android:hint="@string/year"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/searchYearMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="30dp"
        android:text="@string/find" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="578dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="154dp"
        android:layout_marginEnd="13dp">

    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>
